resolved style issue where prefix was overlapping rgb input

--- a/src/app/theme/themedInputLight.scss
+++ b/src/app/theme/themedInputLight.scss
@@ -18,7 +18,7 @@ $break-medium: 767px;
 .wrapper {
     margin: auto;
     position: relative;
-    width: 60%;
+    width: 70%;
     @media screen and (max-width: $break-medium) {
         width: 100%;
     }
